[gd_scene load_steps=4 format=3 uid="uid://c8uc125hl7ma8"]

[ext_resource type="Theme" uid="uid://d21ho0f0x6pdi" path="res://new_theme.tres" id="1_juxg6"]
[ext_resource type="Script" path="res://Scripts/item_option.gd" id="2_8rygc"]
[ext_resource type="Texture2D" uid="uid://dwhl0d7yjkapm" path="res://Sprites/Icons/pet_cursor.svg" id="2_hywkl"]

[node name="ItemOption" type="Control"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1100.0
offset_bottom = -700.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_juxg6")
script = ExtResource("2_8rygc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 12.0
offset_top = 12.0
offset_right = 76.0
offset_bottom = 76.0

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 76.0
offset_bottom = 76.0
texture = ExtResource("2_hywkl")
expand_mode = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelName" type="Label" parent="."]
layout_mode = 0
offset_left = 94.0
offset_top = 11.0
offset_right = 223.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 48
text = "Name"

[node name="LabelDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 83.0
offset_right = 493.0
offset_bottom = 195.0
text = "Description of the upgrade
Description of the upgrade
Description of the upgrade
Description of the upgrade
Description of the upgrade"

[node name="LabelLevel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -166.0
offset_top = 11.0
offset_right = -9.0
offset_bottom = 70.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "Level: 1"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
